--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Keegan Burkett <keegan.2.burkett@gmail.com>",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "gatsby": "^2.30.1",
+    "caniuse-lite": "^1.0.30001341",
+    "gatsby": "^3.4.0",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
@@ -18,6 +19,7 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^5.14.0",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
